Refactoring WebService
- Utilisation *Mapping au lieu de RequestMapping
- Mise à jour suite à passage à SpringBoot2
- Utilisation Lombok